--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="invalid_wallet_address">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_search_results">Search Results</string>
-
+    <string name="web_client_id">1019810872474-d834ghele0gkblegmi2d12drpmaoi57m.apps.googleusercontent.com</string>
     <!-- For search page -->
     <string name="prompt_search">Search for user by username or wallet address</string>
     <string name="action_search">Search</string>
