--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -25,19 +25,21 @@
     <!-- For search page -->
     <string name="prompt_search">Search for user by username or wallet address</string>
     <string name="action_search">Search</string>
+    <string name="time_default">Please select a timescale to view your wallet</string>
 
     <!-- For profile page -->
     <string name="add_friend_button">Add Friend</string>
     <string name="profile_name">Loading profile name…</string>
     <string name="wallet_name">Loading wallet address…</string>
+    <string name="follow_wallet_button">Follow</string>
+    <string name="time_opt_default">Choose a time range</string>
 
     <string-array
         name="time_options">
-        <item>Daily</item>
-        <item>Weekly</item>
-        <item>Monthly</item>
-        <item>Yearly</item>
-        <item>Custom</item>
+        <item>Today</item>
+        <item>Last Week</item>
+        <item>Last Month</item>
+        <item>Last Year</item>
     </string-array>
 
 
