--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_social">Social</string>
     <string name="title_settings">Settings</string>
     <string name="title_notifications">Notifications</string>
+    <string name="ai_button">AI prediction</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_first_name">First Name</string>
