--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -46,5 +46,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="ai_recomendation">AI Recommendation: </string>
+    <string name="share_your_portfolio">Share your portfolio</string>
+    <string name="view_profile">View profile</string>
 
 </resources>
