Chat semi-final state (#68)
* some frontend progress

* add websocket connection on backend

* added chat DB functionality and chathistory API

* working chat interfaces and conversationID functionality

* updated social fragment to try and have leaderboard like view, update getconvoid to init conversation if does not exist

* add missing await in getconversationid

* fix camel case typo

* some chat fixes

* # Conflicts:
#	frontend/app/src/main/AndroidManifest.xml

* chat activity working with real time updates (?)

* fixed missing adapter additem

* added friends button check

* failing but added ConvoHistory API calls; returning a view error that should be fixed in next commit

* FIXED VIEW ERROR FOR CHAT ACTIVITY REEEE

* API callers fixing

Some chat QoL updates

* API callers fixing

Some chat QoL updates

Co-authored-by: Zephaniah Ko <zephaniahko@gmail.com>
Co-authored-by: Charles Lee <chengche674@gmail.com>

--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="action_search">Search</string>
     <string name="time_default">Please select a timescale to view your wallet</string>
 
+    <string name="IP_addy">34.105.106.85</string>
+
     <!-- For profile page -->
     <string name="add_friend_button">Add Friend</string>
     <string name="profile_name">Loading profile name…</string>
@@ -35,8 +37,7 @@
     <string name="follow_wallet_button">Follow</string>
     <string name="time_opt_default">Choose a time range</string>
 
-    <string-array
-        name="time_options">
+    <string-array name="time_options">
         <item>Today</item>
         <item>Last Week</item>
         <item>Last Month</item>
@@ -45,5 +46,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="ai_recomendation">AI Recommendation: </string>
+    <string name="share_your_portfolio">Share your portfolio</string>
+    <string name="view_profile">View profile</string>
 
 </resources>
